--- a/Conversor-moeda-ONE/.classpath
+++ b/Conversor-moeda-ONE/.classpath
@@ -6,5 +6,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="C:/Programação/Pendencias/gson-2.13.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
